NIFI-15165 Aligned those processors and controller services whose property names do not match the human-friendly display names in extended bundle nifi-standard-services